Add first part of time recorder API section
Also:
 - Change static time recorder binder to return a time recorder instead
   of a time recorder factory
 - Rename metrics to measurement across all modules

--- a/doc/bibliography.tex
+++ b/doc/bibliography.tex
@@ -32,4 +32,10 @@
   \url{https://docs.freebsd.org/44doc/psd/18.gprof/paper.pdf},
   Computer Science Division Electrical Engineering and Computer Science Department, University of California, Berkeley Berkeley, California,
   2000.
+%            
+%  \bibitem{GHJ94}
+%  Erich Gamma, Richard Helm, Ralph Johnson, John Vlissides,
+%  \emph{Design patterns : elements of reusable object-oriented software},
+%  Addison-Wesley,
+%  1994.
 \end{thebibliography}
