--- a/doc/main.tex
+++ b/doc/main.tex
@@ -8,6 +8,8 @@
 \usepackage[pagestyles]{titlesec}
 \usepackage{pgf}
 \usepackage{tikz}
+\usepackage{ifthen,xstring,calc,pgfkeys,pgfopts}
+\usepackage{tikz-uml}
 \usepackage[section]{placeins}
 \usepackage{listings}
 \usepackage{color}
